--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,6 @@
-JWT_SECRET=
+	JWT_SECRET = "rahasia",
+	DB_HOST = "shopinglist.c9kk0ysw4pr0.ap-southeast-1.rds.amazonaws.com",
+	DB_USER = "postgres",
+	DB_PASS = "Rafael!23",
+	DB_NAME = "postgres",
+	DB_PORT = "5432"
